--- a/index.html
+++ b/index.html
@@ -91,8 +91,10 @@ p {
 </div>
 <br>
 <br>
-<br>
-	<p>2020</p>
+<br>	
+<script>
+ setInterval("show_time0.innerHTML=new Date().toLocaleString()+' 星期'+'日一二三四五六'.charAt(new Date().getDay());",1000);  
+</script>
 </body>
 </html>
 
