--- a/index.html
+++ b/index.html
@@ -93,7 +93,18 @@ p {
 <br>
 <br>	
 <script>
- setInterval("show_time0.innerHTML=new Date().toLocaleString()+' 星期'+'日一二三四五六'.charAt(new Date().getDay());",1000);  
+ 	    function getDate(){
+                //获取当前时间
+                var date = new Date();
+                //格式化为本地时间格式
+                var date1 = date.toLocaleString();
+                //获取div
+                var div1 = document.getElementById("times");
+                //将时间写入div
+                div1.innerHTML = date1;
+            }
+            //使用定时器每秒向div写入当前时间
+            setInterval("getDate()",1000);
 </script>
 </body>
 </html>
